# likasun

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  COMPLIANCE.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.db  alembic.ini  eslint.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.sh  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  web-e2e.yml
apps/api/: # Code Citations.md  .env  alembic.ini  main.py  name: CI.yaml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_evaluation.py  0003_audit_logs.py  4da2ee42382d_results_indexes.py
apps/api/app/: dependencies.py  metrics.py  repositories.py
apps/api/app/core/: config.py  license.py  logging.py  security.py
apps/api/app/ingest/connectors/: __init__.py  aws.py  azure.py  base.py  gcp.py
apps/api/app/ingest/parsers/: __init__.py  aws.py  azure.py  gcp.py  iac.py
apps/api/app/jobs/: evaluation.py
apps/api/app/models/: actors.py  assets.py  audit.py  controls.py  db.py  documents.py  exceptions.py  meta.py  results.py  runs.py  users.py  vendors.py
apps/api/app/routers/: __init__.py  actors.py  assets.py  auth.py  compliance.py  documents.py  evaluate.py  evaluate_latest.py  exceptions.py  health.py  ingest.py  reports.py  results.py  rules.py  settings.py  vendors.py
apps/api/app/routers/modules/: __init__.py  access.py  contracts.py  policy.py  residency.py  vendors.py
apps/api/app/security/: egress.py
apps/api/app/services/: audit.py  evaluator.py
apps/api/data/: license.rbl
apps/api/tests/integration/: test_flow.py
apps/api/tests/unit/: test_egress_guard.py  test_evaluator_ops.py  test_exceptions.py  test_license.py  test_rule_expansion.py
apps/web/: middleware.ts  package.json  playwright.config.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/access/: page.tsx
apps/web/components/: data-table.tsx  drawer.tsx  header.tsx  modal.tsx  pagination.tsx  status-badge.tsx  theme-provider.tsx  toast.tsx
apps/web/lib/: api.ts
apps/web/pages/: exceptions.tsx  license.tsx
apps/web/tests/: compliance.spec.ts  example.spec.ts  ingest.spec.ts  license.spec.ts  login.spec.ts
docs/: ADMIN.md  AUDIT.md  COMPLIANCE.md  INGEST.md  MANUAL_TEST.md  OBSERVABILITY.md  README.md  ROADMAP.md  RULES.md  SECURITY.md  TESTING.md
ops/: Dockerfile.api  Dockerfile.web  api.Dockerfile  ci.yml  docker-compose.yml  make_demo_pack.sh
ops/helm/: Chart.yaml
ops/k8s/: api.yaml
scripts/: start_codespace.sh  start_demo.sh
tests/: conftest.py  test_compliance_router.py  test_evaluator.py  test_health.py  test_ingest.py  test_license.py  test_live_ingest.py  test_load_demo.py  test_modules.py  test_observability.py  test_results_router.py  test_rule_engine.py  test_rulepacks.py
tests/fixtures/ingest/: aws_iam_credential_report.csv  azure_resource_graph.json  gcp_asset_inventory.json  terraform_plan.json
tests/fixtures/licenses/: dev.json  expired.json  missing_feature.json
tests/mocks/: aws.py  mock_aws.json
web/app/assets/: page.tsx
web/app/compliance/: page.tsx
web/app/controls/: page.tsx
web/app/dashboard/: page.tsx
web/app/evaluate/: page.tsx
web/app/ingest/: page.tsx
web/app/login/: page.tsx
web/app/results/: page.tsx
(+39 files in other folders)
