[tool.poetry]
name = "raybeam-api"
version = "0.1.0"
description = "Raybeam API Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry]
name = "raybeam-api"
version = "0.1.0"
description = "Raybeam API Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
pydantic = "^2.0.0"
reportlab = "^4.0.0"
python-multipart = "^0.0.6"
httpx = "^0.25.0"  # Move from dev to main dependencies

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E501"]  # Line too long
